@@ -45,8 +45,8 @@ public class QuizSubmissionRetrieverUTest extends CanvasTestBase {
 
         List<QuizSubmission> submissions = quizSubmissionReader.getQuizSubmissions(someCourseId, someQuizId);
         Assert.assertEquals(2, submissions.size());
-        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(new Integer(1)::equals).findFirst().isPresent());
-        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(new Integer(2)::equals).findFirst().isPresent());
+        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(Integer.valueOf(1)::equals).findFirst().isPresent());
+        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(Integer.valueOf(2)::equals).findFirst().isPresent());
     }
 
     @Test(expected = JsonSyntaxException.class)
@@ -128,8 +128,8 @@ public class QuizSubmissionRetrieverUTest extends CanvasTestBase {
 
         List<QuizSubmission> submissions = quizSubmissionReader.readAsCanvasUser(someUserId).getQuizSubmissions(someCourseId, someQuizId);
         Assert.assertEquals(2, submissions.size());
-        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(new Integer(1)::equals).findFirst().isPresent());
-        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(new Integer(2)::equals).findFirst().isPresent());
+        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(Integer.valueOf(1)::equals).findFirst().isPresent());
+        Assert.assertTrue(submissions.stream().map(QuizSubmission::getId).filter(Integer.valueOf(2)::equals).findFirst().isPresent());
     }
 
     @Test(expected = JsonSyntaxException.class)
